Ticket #7060 - customize invitation mail and add methods for accept new user or existing user

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -289,6 +289,8 @@ en:
       reset_password_instructions:
         instruction: "Someone has requested a link to change your password, and you can do this
           through the link below. <strong>Please note that this link expires in %{expire} hours.</strong>"
+      invitation_instructions:
+        subject: "%{user} invited you to join %{team}"
   error_user_is_not_a_team_member: "Sorry, you can only assign tasks to members of this team"
   slack_assign_verification_status: "*%{user}* assigned %{url} to *%{assignee}* in project *%{project}*"
   slack_unassign_verification_status: "*%{user}* unassigned %{url} from *%{assignee}* in project *%{project}*"
